--- a/PaulZero.WindowsRoutine.Wpf/PaulZero.WindowsRoutine.Wpf.csproj
+++ b/PaulZero.WindowsRoutine.Wpf/PaulZero.WindowsRoutine.Wpf.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="6.1.0" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.6.4" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
