--- a/PaulZero.WindowsRoutine.Wpf/PaulZero.WindowsRoutine.Wpf.csproj
+++ b/PaulZero.WindowsRoutine.Wpf/PaulZero.WindowsRoutine.Wpf.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>clock_icon.ico</ApplicationIcon>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,6 +43,9 @@
 
   <ItemGroup>
     <None Update="clock_icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Readme.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\clock_icon.ico">
