--- a/PaulZero.RoutineEnforcer.Tests/PaulZero.RoutineEnforcer.Tests.csproj
+++ b/PaulZero.RoutineEnforcer.Tests/PaulZero.RoutineEnforcer.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
@@ -15,6 +16,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PaulZero.RoutineEnforcer\PaulZero.RoutineEnforcer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\Models\Serialisation\DaySelectionConverterTestData.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
